Fix horizontal scroll and splash screen size

--- a/wp-content/plugins/aliemu-plugins/inc/styles/collections/aliemu/courselist.styl
+++ b/wp-content/plugins/aliemu-plugins/inc/styles/collections/aliemu/courselist.styl
@@ -1,7 +1,9 @@
 coursebox(primarycolor)
     background white
     box-shadow $box-shadow
+    white-space normal
     margin 10px
+    display inline-block
     max-width 300px
     min-width 300px
     .au-courseheader
