--- a/wp-content/plugins/aliemu-plugins/inc/styles/collections/aliemu/homepage.styl
+++ b/wp-content/plugins/aliemu-plugins/inc/styles/collections/aliemu/homepage.styl
@@ -25,8 +25,8 @@
         @media (max-width 480px)
             #row-1
                 padding-bottom 0
-                .container .splash
-                    height 60vh
+                // .container .splash
+                //     height 60vh
 
         for i in 2..6
             #row-{i}
