--- a/wp-content/plugins/aliemu-plugins/inc/styles/collections/aliemu/series-pages.styl
+++ b/wp-content/plugins/aliemu-plugins/inc/styles/collections/aliemu/series-pages.styl
@@ -35,8 +35,13 @@
                 padding 0
 
     .course-boxes
-        display flex
-        overflow-x auto
+        overflow-x scroll
+        overflow-y hidden
+        -webkit-overflow-scrolling touch
+        white-space nowrap
+        width auto
+        max-height 360px
+        height 360px
         align-items center
         background $gray-light
         .coursebox
@@ -45,7 +50,7 @@
 
     .no-scroll
         flex-flow row wrap
-        justify-content center 
+        justify-content center
         padding 20px 30px
 
 @media (max-width: 480px)
